# odoo-semantic-server

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .~lock.TASKS.md#  BIRDS_EYE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SETUP.md  TASKS.md  cleanup-report.md  compose.local.yml  coverage-report.md  diagnose-report.md  docker-compose.yml  glossary.md  install.sh  odoo-semantic.conf.example  product_brief.md  pyproject.toml  roadmap.md  timeouts-audit.md
.claude/: settings.json
.github/PULL_REQUEST_TEMPLATE/: patterns.md
.github/workflows/: _smoke_failure_test.yml  ci.yml  nightly-smoke.yml  pin-sha.yml
architecture/: README.md  deployment.md  graph-store.md  indexer.md  mcp-server.md  overview.md  tenancy.md
branding/: README.md
contexts/: dev.md  research.md  review.md
data/: common_passwords.txt  common_passwords.txt.LICENSE
data-model/: README.md  methods.md  views.md
decisions/: 0001-postgres-vs-neo4j.md  0002-embedding-provider.md  0003-brand-name.md  0004-multi-tenant-model.md  0005-tailscale-tenant.md  README.md
docker/: Dockerfile.indexer  Dockerfile.server  postgres-init.sql
docker/initdb.d/: 01-pgvector.sql
docs/: client-setup.md  deploy.md  huong-dan-stack.md  m7.5-batch1-mcp-signoff.md  m7.5-batch3-infra.md  m7.5-batch4-recall.md  m7.5-mcp-verification.md  m7.5-pilot-results.md  m7.5-post-fix-verification.md  m7.5-verification-issues.md  orchestration-workflow.md  thiet-ke-kien-truc.md
migrations/: 0001_initial.sql  0002_add_category_to_patterns.sql  0002_master_data_seed.sql  0003_profile_hierarchy.sql  0004_add_missing_version_profiles.sql  0005_api_key_session_state.sql  000_noop.sql  001_init.sql  002_views_arch_xml.sql  003_views_inherit_check_relax.sql  9000_webui_users.sql  9001_m9_user_mgmt.sql  9001_signup_email_verify.sql  m13_001_embeddings_profile_name.sql  m13_002_tenants_and_fks.sql  m13_003_embeddings_provenance.sql  m13_004_embeddings_rls.sql  m13_005_tenant_members.sql  m13_006_plans.sql  m13_007_usage_counter_cascade.sql  m13_008_waitlist_emails.sql  m13_009_unlimited_plan_and_key_overrides.sql  m13_010_app_settings.sql  m13_011_ee_modules.sql  m13_012_patterns.sql  m13_013_consolidate_free_plans.sql  m13_014_billing_p1.sql  m13_015_pricing_model.sql  m13_016_plan_min_seats.sql  m13_017_withdrawal_consent.sql  m13_018_embedding_model_dim.sql  m13_019_public_tenant_isolation.sql  m13_020_grant_webui_users_osm_reader.sql  m13_021_embeddings_global_sentinel.sql  m9_001_oauth_columns.sql  m9_002_api_keys_user_fk.sql  m9_003_admin_audit_log.sql  m9_004_login_attempts.sql  m9_005_active_sessions.sql  m9_006_email_verifications.sql  (+3 more)
ops/: backfill_module_profile.cypher  backfill_patterns.py  backfill_unresolved_is_definition.cypher  backfill_webhook_benign_ignored.sql  check_long_transactions.cypher  check_long_transactions.sh  cleanup_absolute_path_nodes.cypher  cleanup_double_prefixed_xmlid_nodes.cypher  cleanup_noninstallable_stale_modules.py  cleanup_null_repo_stubs.cypher  cleanup_resolved_unresolved_flags.cypher  cleanup_same_name_inherits_mesh.cypher  cleanup_snap_mod.cypher  cleanup_test_patterns.cypher  cleanup_test_sentinel_modules.cypher  cleanup_unresolved_placeholders.cypher  cleanup_v8_ghosts.cypher  cleanup_v8_ghosts_diagnose.cypher  correct_node_owning_profile.cypher  nginx-ratelimit.conf.patch  regrant_osm_reader_after_migration.sh  rls_create_osm_reader.sql  rls_cutover.sh
osm/: __init__.py
reports/: phase-01-accept-raw.json  phase-01-accept.md  phase-01-exit-criteria.md  phase-02-accept-raw.json  phase-02-accept.md  phase-02-exit-criteria.md  project-audit-2026-04-23.md
research/: README.md  competitors.md  embedding-benchmarks.md  embedding-self-host-spike.md  mcp-ecosystem.md  odoo-internals.md
scripts/: add-spdx-headers.sh  backfill_inherits_order.cypher  bench_corpus.py  bench_embed.py  bootstrap.sh  check-systemd-overrides.sh  cleanup_v96.cypher  create_tenant.py  dump_graph_snippet.py  index.py  index_test.py  lint_fetch_content_type.sh  lint_json_response.sh  migrate.py  osm-authorize.sh  regenerate_golden.py  regenerate_golden_views.py  regenerate_top50_views.py  server-setup.sh  wait-pg-healthy.sh
security/: dpa-template.md  encryption.md  threat-model.md
site/: .env.example  .gitignore  astro.config.mjs  node_modules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.mjs  tsconfig.json  vitest.config.ts
specs/: _template.md  find_examples.md  impact_analysis.md  resolve_field.md  resolve_method.md  resolve_model.md  resolve_view.md
src/: _version.py  auth.py  cli.py  config.py  constants.py  crypto.py  diagnostics.py  git_utils.py  logging_config.py  metrics.py  settings.py  settings_registry.py  ssh_key_resolve.py
src/db/: pg.py  (+11 more)
systemd/: odoo-semantic-mcp.service.template  odoo-semantic-webui.service.template
tasks/: _scratch_embed_spike.md  _scratch_server_setup.md  lessons.md  phase-01-plan.md  phase-02-plan.md  todo.md
tests/: _timeout_harness.py  conftest.py  test_account_self_service.py  test_account_subscription.py  test_account_usage_api.py  test_admin_api_key_plan.py  test_admin_ee_modules_endpoints.py  test_admin_migrations.py  test_admin_patterns_endpoints.py  test_admin_plans_endpoints.py  test_admin_settings_endpoints.py  test_admin_users.py  test_admin_users_bulk_plan.py  test_api_key_hmac.py  test_api_key_reactivate.py  test_assign_key_owner.py  test_audit_log.py  test_audit_log_integration.py  test_auth.py  test_auth_integration.py  test_backfill_module_profile.py  test_backfill_patterns.py  test_backup_cli_docker_fallback.py  test_backup_pg_precheck.py  test_billing_activation.py  test_billing_cancel_voluntary.py  test_billing_polar_extractors.py  test_billing_polar_verify.py  test_billing_provisioning.py  test_billing_rls.py  test_billing_schema_m13_015.py  test_bootstrap_hook.py  test_calibration_eval.py  test_change_password.py  test_checkout_consent.py  test_claim_on_login.py  test_cleanup_noninstallable_stale_modules.py  test_cli.py  test_cli_backup_bundle.py  test_cli_diagnose.py  (+335 more)
(+736 files in other folders)
