[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-semantic-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.3,<3.0",
    "neo4j>=5.0,<6.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3,<0.5",
    "tree-sitter>=0.21",
    "tree-sitter-javascript>=0.21",
    "authlib>=1.6.5,<1.7.0",  # 1.7.0 adds AuthlibDeprecationWarning (jose→joserfc migration)
    "fastapi>=0.115,<1.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.9",
    "cryptography>=42",
    "uvicorn>=0.29",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.5",
    "ruff>=0.4",
    "testcontainers[neo4j]>=4.13,<5.0",  # 5.0 may remove wait_container_is_ready API
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "neo4j: integration tests yêu cầu Neo4j đang chạy (skip bằng -m 'not neo4j')",
    "postgres: integration tests yêu cầu PostgreSQL đang chạy (skip bằng -m 'not postgres')",
    "ollama: integration tests yêu cầu Ollama đang chạy (skip bằng -m 'not ollama')",
    "smoke: end-to-end smoke tests (per-PR fast tier, requires Neo4j)",
    "browser: browser-level E2E tests via Playwright (requires PostgreSQL)",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
