[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-semantic-mcp"
version = "0.5.0"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.5,<1.7.0",  # 1.7.0 adds AuthlibDeprecationWarning (jose→joserfc migration)
    "bcrypt>=4.0",             # M7 W16 — Web UI password hashing (cost=12)
    "pyotp>=2.9",              # M9 W-MF — TOTP MFA (RFC 6238)
    "qrcode[pil]>=8.0",        # M9 W-MF — QR code PNG generation for TOTP enrollment
    "cryptography>=42",
    "fastapi>=0.115,<1.0",
    "fastmcp>=2.3,<3.0",
    "itsdangerous>=2.1",       # M7 W16 — Starlette SessionMiddleware cookie signing
    "jsonschema>=4.21",
    "httpx>=0.27",
    "neo4j>=5.0,<6.0",
    "pgvector>=0.3,<0.5",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",       # issue #141 — auto-load .env in CLI/migrate (override=False so systemd env still wins)
    "python-multipart>=0.0.9",
    "tqdm>=4.66",
    "tree-sitter>=0.21",
    "tree-sitter-css>=0.21",
    "tree-sitter-javascript>=0.21",
    "httpx>=0.27",              # M9 W-SG — hCaptcha verification (async HTTP client)
    "uvicorn>=0.29",
    "yoyo-migrations>=9,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.5",
    "ruff>=0.4",
    "testcontainers[neo4j]>=4.13,<5.0",  # 5.0 may remove wait_container_is_ready API
    "asgi-lifespan>=2.1",
    "check-jsonschema>=0.29",             # CI: validate patterns.json via CLI (replaces python -m jsonschema)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "neo4j: integration tests yêu cầu Neo4j đang chạy (skip bằng -m 'not neo4j')",
    "postgres: integration tests yêu cầu PostgreSQL đang chạy (skip bằng -m 'not postgres')",
    "ollama: integration tests yêu cầu Ollama đang chạy (skip bằng -m 'not ollama')",
    "smoke: end-to-end smoke tests (per-PR fast tier, requires Neo4j)",
    "browser: browser-level E2E tests via Playwright (requires PostgreSQL)",
    "flaky: test có thể flake do timing/contention (CI advisory)",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
